Fixed #82 - image of eht piipeline process is now center aligned

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -254,6 +254,10 @@ figcaption {
   text-align: center;
 }
 
+.csfigcaption {
+  text-align: center;
+}
+
 .fig-center {
   display: block;
   margin-left: auto;
